--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,7 +31,7 @@
   
   .top-wrapper {
     padding: 150px 0 180px 0;
-    background-image: url(file:///C:/Users/aulia/Downloads/food%20header%201.png);
+    background-image: url(https://github.com/auliyanurasyifa/github.io/blob/main/food%20header%201.png);
     background-size: cover;
     text-align: center;
   }
