--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,12 +25,19 @@
     width: 100%;
     padding: 0 10px;
     margin: 0 auto;
-    background-color: rgb(97, 91, 91);
-    background-size: cover;
-    opacity: 0.5;
   }
 
-  .container p {
+  .description {
+    max-width: 1170px;
+    width: 100%;
+    padding: 0 10px;
+    margin: 0 auto;
+    background-color: rgb(97, 91, 91);
+    background-size: cover;
+    color: whitesmoke;
+  }
+
+  .description p {
     max-width: 770px;
     width: 100%;
     padding: 8px 0px;
@@ -45,14 +52,12 @@
   }
   
   .top-wrapper h1 {
-    opacity: 0.7;
     font-size: 45px;
     letter-spacing: 5px;
     margin-bottom: 10px;
   }
   
   .top-wrapper p {
-    opacity: 0.8;
     font-size: 18px;
     margin-bottom: 2px;
   }
@@ -96,36 +101,52 @@
     display: none;
   }
 
-/*reservasi*/
+  /*reservasi*/
 .contact-form{
-    padding:30px 0 0 50px;
+  padding:30px 0 0 50px;
 }
 .contact-form h3{
-    font-size:28px;
-    padding: 30px 0 px 0 ;
-    color:#4c5547;
+  font-size:28px;
+  padding: 30px 0 px 0 ;
+  color:#4c5547;
 }
 .contact-form p{
-    font-size:18px;
-    color:#4c5547;
-    padding-top:15px;
+  font-size:18px;
+  color:#4c5547;
+  padding-top:15px;
 }
 input{
-    width:300px;
+  width:300px;
 }
 .contact-submit{
-    font-size:18px;
-    color:#4c5547;
-    background-color:rgba(199,199,187,0.7);
-    width:300px;
-    padding:20px 10px;
-    height:30px;
-    margin-top:20px;
-    margin-bottom:100px;
-    text-align:center;
+  font-size:18px;
+  color:#4c5547;
+  background-color:rgba(199,199,187,0.7);
+  width:300px;
+  padding:20px 10px;
+  height:30px;
+  margin-top:20px;
+  margin-bottom:100px;
+  text-align:center;
 }
 .contact-submit:hover{
-    background-color:rgba(199,199,187,1);
-    cursor: pointer;
+  background-color:rgba(199,199,187,1);
+  cursor: pointer;
 }
 
+/*footer*/
+  footer img {
+    width: 120px;
+    display: block; 
+    margin: auto;
+    padding-bottom: 20px;
+  }
+  
+  footer {
+    height: 70px;
+    width: 100%;
+    bottom: 0;
+    padding-top: 20px;
+    background-color: rgb(0, 0, 0);
+    z-index: 10;
+  }
