--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,6 +18,7 @@
 
   .fa {
     margin-right: 5px;
+    margin-bottom: 20px;
   }
 
   .container {
@@ -30,8 +31,8 @@
   .description {
     width: 100%;
     margin: 0 auto;
-    padding: 20px 0px;
-    background-color: rgba(97, 91, 91, 0.45);
+    padding: 10px 0px;
+    background-color: rgba(97, 91, 91, 0.55);
     background-size: cover;
     color: whitesmoke;
   }
@@ -44,7 +45,7 @@
   }
   
   .top-wrapper {
-    padding: 180px 0 135px 0;
+    padding: 170px 0 145px 0;
     background-image: url(./top_wrapper.png);
     background-size: cover;
     text-align: center;
