--- a/responsive.css
+++ b/responsive.css
@@ -1,39 +1,120 @@
-/* Untuk Tablet */
-@media all and (max-width: 1000px) {
-    .top-wrapper h1 {
-      font-size: 32px;
-    }
-    
-    .heading h2 {
-      font-size: 20px;
-    }
+/*layout smartphone*/
+@media (max-width:670px){
+  header {
+    position: fixed;
   }
-  
-  /* Untuk Smartphone */
-  @media all and (max-width: 670px) {
-    footer {
-      text-align: center;
-    }
-    
-    .top-wrapper {
-      text-align: left;
-    }
-    
-    .header-right {
-      display: none;
-    }
-    
-    .menu-icon {
-      display: block;
-    }
-    
-    .top-wrapper h1 {
-      font-size: 24px;
-      line-height: 36px;
-    }
-    
-    .top-wrapper p {
-      font-size: 14px;
-      line-height: 20px;
-    }
+  .top-wrapper h1 {
+    text-align: left;
+    font-size: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
+  .top-wrapper h3 {
+    font-size: 25px;
+  }
+  .description p {
+    max-width: 400px;
+    text-align: justify;
+  }
+  .header-right {
+    display: none;
+  }
+  .menu-icon {
+    display: block;
+    padding: 0 50px 0 0;
+  }
+  .title-week{
+    padding-top:30px;
+    font-size:12px;
+    padding-bottom: 5px;
+  }
+  .resep{
+    display: block;
+  }
+  .gambar img{
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+  }
+  .resep li{
+    padding:0 auto;
+    width: auto;
+  }
+  .deskripsi h2 {
+    text-align: center;
+    font-size: 20px;
+  }
+  .deskripsi p{
+    text-align: justify;
+  }
+  .contact-form {
+    padding-top: 20px;
+  }
+  .contact-form h3{
+    font-size:23px;
+    padding-top: 20px;
+  }
+  .contact-form p{
+    font-size:16px;
+    padding: 10px 18px 0px 18px;
+  }
+  input, textarea {
+    width: 200px;
+    margin-top: 8px;
+    padding: 12px;
+    font-size: 13px;
+  }
+  .contact-submit{
+    width: 80px;
+  }
+  footer{
+    width:100%;
+  }
+  footer img {
+    width: 100px;
+  }
+  footer li {
+    font-size: 12px;
+  }
+  .fa {
+    font-size: 12px;
+  }
+}
+/*layout tablet*/
+@media(max-width:1000px){
+  header {
+    position: fixed;
+  }
+  .header-left {
+    margin-left: 25px;
+  }
+  .header-right {
+    margin-right: 25px;
+  }
+  .top-wrapper h1 {
+    font-size: 40px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .top-wrapper h3 {
+    font-size: 30px;
+  }
+  .top-wrapper p {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .gambar img{
+    float: right;
+    width: 277px;
+  }
+  .deskripsi p{
+    width: 300px;
+  }
+  .contact-form{
+    padding-left: 0px;
+}  
+  footer{
+    width:auto;
+  }
+} 
