--- a/stylesheet.css
+++ b/stylesheet.css
@@ -232,3 +232,18 @@ input, textarea {
         font-size:15px;
         color: whitesmoke;
     }   
+    
+    /*Animasi*/
+.description h1{
+  color:#ffffff;
+  position:relative;
+  animation-name:animasi;
+  animation-duration:2s;
+  animation-iteration-count:infinite;
+}
+
+@keyframes animasi{
+  0% {left:0px;top:0px;}
+  50% {color:#fff3ee;left:0px;top:20px}
+  100% {left:0px;top:0px;}
+}
